--- a/src/main/resources/templates/hwpage.html
+++ b/src/main/resources/templates/hwpage.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>날샘 NALSSAM</title>
+    <title>The HardWare</title>
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="./img/NALSSAM_LOGO.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="css/maindesktop.css" />
+    <link rel="stylesheet" type="text/css" href="css/hwpage.css" />
     <style>
       @font-face {
         font-family: "KoreanBRS-B";
@@ -68,7 +68,7 @@
         font-weight: 1 1000;
         src: url("./fonts/AppleSDGothicNeo-Bold.ttf") format("truetype");
       }
-      
+
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -237,22 +237,19 @@
     <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
-    <input type="hidden" id="anPageName" name="page" value="maindesktop" />
+    <input type="hidden" id="anPageName" name="page" value="hwpage" />
     <div class="container-center-horizontal">
-      <div class="maindesktop screen">
-        <div class="x2020-C61RwL bestdongari2020">2020년도 대전대신고등학교 최우수 동아리 UCC [날샘]</div>
+      <div class="hwpage screen">
         <div class="view-C61RwL">
-          <div class="view-UOcbxe">
-            <div class="view-ib14tF">
-              <div class="photo-1520-1c9fe-copy-EsLsan">
-                <div class="mask-9Yx1Kk"></div>
-              </div>
-            </div>
-            <div class="textlabel-ib14tF korean">동아리 실을 소개합니다</div>
+          <div class="navbar-UOcbxe">
+            <div class="hr-dIx87p"></div>
             <a href="jiwonhaki.html">
-              <div class="view-N77PsP"><div class="textlabel-OFwZ3p ji1style">지금 확인하기</div></div></a
+              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
             >
           </div>
+          <a href="maindesktop.html"
+            ><div class="nalssam-UOcbxe nalssam-style blacknalssam designed-by-omen-style">NALSSAM</div></a
+          >
         </div>
         <div class="bar-C61RwL">
           <div class="footer-enIJlq">
@@ -268,105 +265,44 @@
             <div class="nalssam-ZXviDO naldev-style hw-little-fonts">
               NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
             </div>
+            <a href="hwpage.html"><div class="the-hw-ZXviDO naldev-style hw-little-fonts">THE HW</div></a>
+            <img
+              class="chevron-ZXviDO"
+              src="img/developer-sw-page-chevron-2248F861-D2EE-4745-82F7-AE781B4BD282@2x.png"
+            />
             <div class="hr-Ij0EpA"></div>
           </div>
-          <a href="maindesktop.html"
-            ><div class="nalssam-enIJlq nalssam-style blacknalssam designed-by-omen-style">NALSSAM</div></a
-          >
         </div>
-        <div class="group-C61RwL">
-          <div class="view-NOXmfT">
-            <div class="view-U5IdvX">
-              <div class="textlabel-YP9PVx korean">대전대신고등학교 동아리 날샘</div>
-              <div class="nalssam-YP9PVx littlenalssammarkerfelt">NALSSAM</div>
-              <div class="x20200302-YP9PVx numberfont">2020/03/02</div>
-              <div class="sw-hw-YP9PVx bestdongari2020">생명, 창업, S/W, H/W 융합 동아리~~~~~~~~~~~~설명 추가 필요</div>
-              <a href="jiwonhaki.html">
-                <div class="view-YP9PVx"><div class="textlabel-jDGmGP ji1style">지원 하기</div></div></a
-              >
+        <a href="maindesktop.html"
+          ><div class="nalssam-C61RwL nalssam-style blacknalssam designed-by-omen-style">NALSSAM</div></a
+        >
+        <div class="the-hardwa-mformation-C61RwL">
+          <div class="hw-ZGAt1V youridea">당신의 HW아이디어가 현실이 되기<br />더할 나위 없이 좋은 곳.</div>
+          <div class="the-hard-ware-ZGAt1V the-hardware-style">The HardWare</div>
+          <div class="link-ZGAt1V">
+            <div class="textlabel-mmyxxG watchrightnow newcrewofsw">모집 영상 확인하기</div>
+            <div class="icon-mmyxxG">
+              <img class="triangle-WZtRnH" src="img/hw-page-triangle-91167C9D-D30C-454B-A648-B631B1C5A9ED@2x.png" />
+              <div class="oval-WZtRnH"></div>
             </div>
           </div>
-          <div class="kakao-talk-7-00-42-38-NOXmfT"></div>
-        </div>
-        <div class="view-VMr6Om">
-          <a href="maindesktop.html"><div class="nalssam-5l5ivn nalssam-text-logo-style">NALSSAM</div></a>
-        </div>
-        <div class="textlabel-C61RwL nalssambusy">날샘의 부서들</div>
-        <div class="video-C61RwL">
-          <iframe
-            style="border: 0; pointer-events: auto"
-            id="ytplayer"
-            type="text/html"
-            width="100%"
-            height="100%"
-            src="https://www.youtube.com/embed/C4I6iRQlFXY?rel=0"
-            frameborder="0"
-            allowfullscreen="allowfullscreen"
-            mozallowfullscreen="mozallowfullscreen"
-            msallowfullscreen="msallowfullscreen"
-            oallowfullscreen="oallowfullscreen"
-            webkitallowfullscreen="webkitallowfullscreen"
-          ></iframe>
-        </div>
-        <div class="stacked-group-C61RwL">
-          <div class="sw-SHDHHB">
-            <div class="view-lzoPek">
-              <div class="viewname-BzxCk6">
-                <div class="x2-zraioE">
-                  <div class="view-rWpX6S">
-                    <div class="x2020-nalssam-sw-RnTQO0 nalssamnewcrew">
-                      <span class="span1-yN6d6y">2020</span><span class="span2-yN6d6y">년도</span
-                      ><span class="span3-yN6d6y"> NALSSAM SW </span><span class="span4-yN6d6y">분야</span
-                      ><span class="span5-yN6d6y">&nbsp;</span><span class="span6-yN6d6y">신입생</span
-                      ><span class="span7-yN6d6y">&nbsp;</span><span class="span8-yN6d6y">모집</span>
-                    </div>
-                    <div class="x20210301-RnTQO0 datefont">2021/03/01</div>
-                    <div class="nalssam-RnTQO0 nalssamlogo">NALSSAM</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <a href="developerswpage.html">
-              <div class="link-lzoPek">
-                <div class="learn-more-T5zvdP ideaimformation dongariactfuck learn-more-style">learn more</div>
-                <img class="icon-T5zvdP" src="img/maindesktop-icon-3DF14DB2-418B-479B-A8BC-5A06748E88E3@2x.png" /></div
-            ></a>
-            <a href="developerswpage.html">
-              <div class="sw-picture-lzoPek">
-                <a href="developerswpage.html" onclick="window.event.stopPropagation()"
-                  ><img
-                    class="sw-picture-TzM2mw"
-                    src="img/maindesktop-swpicture-C4168C94-2B77-4D68-BEFF-94432B4F514F.png"
-                /></a></div
-            ></a>
-          </div>
-          <div class="the-hard-ware-SHDHHB">
-            <a href="hwpage.html">
-              <div class="view-16doD8">
-                <div class="viewname-TpBRmO">
-                  <div class="x2-rsDJhO">
-                    <div class="view-BB10vM">
-                      <div class="x2020-nalssam-the-h-LM28U6 nalssamnewcrew">
-                        <span class="span1-0HgRQE">2020</span><span class="span2-0HgRQE">년도</span
-                        ><span class="span3-0HgRQE"> NALSSAM </span><span class="span4-0HgRQE">The HardWare</span
-                        ><span class="span5-0HgRQE">&nbsp;</span><span class="span6-0HgRQE">신입생</span
-                        ><span class="span7-0HgRQE">&nbsp;</span><span class="span8-0HgRQE">모집</span>
-                      </div>
-                      <div class="x20210301-LM28U6 datefont">2021/03/01</div>
-                      <div class="nalssam-LM28U6 nalssamlogo">NALSSAM</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="the-hard-ware-TpBRmO"></div></div
-            ></a>
-            <a href="hwpage.html">
-              <div class="link-16doD8">
-                <div class="learn-more-TGvB4n ideaimformation dongariactfuck learn-more-style">learn more</div>
-                <img class="icon-TGvB4n" src="img/maindesktop-icon-3DF14DB2-418B-479B-A8BC-5A06748E88E3@2x.png" /></div
-            ></a>
+          <div class="hw-h90qLU ideaimformation dongariactfuck learn-more-style">
+            진로가 HW 분야인 친구들은 각각 자신만의 HW아이디어를 가지고 있습니다. 2020년 한해동안 저희 날샘 3기 HW분야
+            친구들도 자신만의 HW 아이디어를 현실화하고 자신의 진로를 확이했죠. 이제 당신의 아이디어가 필요합니다. 다른
+            동아리에서도 비슷하게 말했다고요? 뭐, 그 동아리에는 3D 프린트, 레이저 커팅기와 같은 장비들이 있나요? 저희
+            동아리에서 오직 느낄 수 있는 장비들과 함께 자신의 아이디어를 현실화 해보세요.
           </div>
         </div>
-        <div class="img9696-C61RwL"></div>
+        <div class="pikachu-photo-C61RwL"></div>
+        <div class="color-dif-C61RwL"></div>
+        <div class="x-C61RwL youridea">언제든 제작 가능한 동아리<br />시설, 설비들</div>
+        <div class="group-2-C61RwL">
+          <div class="the-hard-ware-zUixHA the-hardware-style">The HardWare</div>
+          <img
+            class="nalssam-logo-zUixHA"
+            src="img/jiwonhaki-nalssam-logo-62D4886D-F326-41FC-8D29-D294A974AF43@2x.png"
+          />
+        </div>
       </div>
     </div>
   </body>
