--- a/src/main/resources/templates/jiwonhaki.html
+++ b/src/main/resources/templates/jiwonhaki.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>날샘 NALSSAM</title>
+    <title>지원하기</title>
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="./img/NALSSAM_LOGO.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="css/maindesktop.css" />
+    <link rel="stylesheet" type="text/css" href="css/jiwonhaki.css" />
     <style>
       @font-face {
         font-family: "KoreanBRS-B";
@@ -68,7 +68,7 @@
         font-weight: 1 1000;
         src: url("./fonts/AppleSDGothicNeo-Bold.ttf") format("truetype");
       }
-      
+
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -237,22 +237,19 @@
     <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
-    <input type="hidden" id="anPageName" name="page" value="maindesktop" />
+    <input type="hidden" id="anPageName" name="page" value="jiwonhaki" />
     <div class="container-center-horizontal">
-      <div class="maindesktop screen">
-        <div class="x2020-C61RwL bestdongari2020">2020년도 대전대신고등학교 최우수 동아리 UCC [날샘]</div>
+      <div class="jiwonhaki screen">
         <div class="view-C61RwL">
-          <div class="view-UOcbxe">
-            <div class="view-ib14tF">
-              <div class="photo-1520-1c9fe-copy-EsLsan">
-                <div class="mask-9Yx1Kk"></div>
-              </div>
-            </div>
-            <div class="textlabel-ib14tF korean">동아리 실을 소개합니다</div>
+          <div class="navbar-UOcbxe">
+            <div class="hr-dIx87p"></div>
             <a href="jiwonhaki.html">
-              <div class="view-N77PsP"><div class="textlabel-OFwZ3p ji1style">지금 확인하기</div></div></a
+              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
             >
           </div>
+          <a href="maindesktop.html"
+            ><div class="nalssam-UOcbxe nalssam-style blacknalssam designed-by-omen-style">NALSSAM</div></a
+          >
         </div>
         <div class="bar-C61RwL">
           <div class="footer-enIJlq">
@@ -268,105 +265,26 @@
             <div class="nalssam-ZXviDO naldev-style hw-little-fonts">
               NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
             </div>
+            <a href="jiwonhaki.html"><div class="textlabel-ZXviDO naldev-style hw-little-fonts">지원하기</div></a>
+            <img
+              class="chevron-ZXviDO"
+              src="img/developer-sw-page-chevron-2248F861-D2EE-4745-82F7-AE781B4BD282@2x.png"
+            />
             <div class="hr-Ij0EpA"></div>
           </div>
-          <a href="maindesktop.html"
-            ><div class="nalssam-enIJlq nalssam-style blacknalssam designed-by-omen-style">NALSSAM</div></a
-          >
         </div>
-        <div class="group-C61RwL">
-          <div class="view-NOXmfT">
-            <div class="view-U5IdvX">
-              <div class="textlabel-YP9PVx korean">대전대신고등학교 동아리 날샘</div>
-              <div class="nalssam-YP9PVx littlenalssammarkerfelt">NALSSAM</div>
-              <div class="x20200302-YP9PVx numberfont">2020/03/02</div>
-              <div class="sw-hw-YP9PVx bestdongari2020">생명, 창업, S/W, H/W 융합 동아리~~~~~~~~~~~~설명 추가 필요</div>
-              <a href="jiwonhaki.html">
-                <div class="view-YP9PVx"><div class="textlabel-jDGmGP ji1style">지원 하기</div></div></a
-              >
-            </div>
-          </div>
-          <div class="kakao-talk-7-00-42-38-NOXmfT"></div>
+        <a href="maindesktop.html"
+          ><div class="nalssam-C61RwL nalssam-style blacknalssam designed-by-omen-style">NALSSAM</div></a
+        >
+        <div class="x2021-4-C61RwL youridea">2021년도 날샘 4기 모집<br />지금 지원하세요.</div>
+        <div class="group-2-C61RwL"></div>
+        <div class="nalssam-VMr6Om nalssam-text-logo-style">NALSSAM</div>
+        <img class="img9678-C61RwL" src="img/jiwonhaki-img9678-2924CC6B-8658-403C-A627-F56A973629B9.jpg" />
+        <div class="x-C61RwL">
+          <span class="span1-ZmHEo7"
+            >대충 엄청난 내용 + 홍보영상 스게!!<br />우리 저번 대회 나갔던거 자랑 하고<br />QR 및 자료 등등등등</span
+          ><span class="span2-ZmHEo7"><br /></span>
         </div>
-        <div class="view-VMr6Om">
-          <a href="maindesktop.html"><div class="nalssam-5l5ivn nalssam-text-logo-style">NALSSAM</div></a>
-        </div>
-        <div class="textlabel-C61RwL nalssambusy">날샘의 부서들</div>
-        <div class="video-C61RwL">
-          <iframe
-            style="border: 0; pointer-events: auto"
-            id="ytplayer"
-            type="text/html"
-            width="100%"
-            height="100%"
-            src="https://www.youtube.com/embed/C4I6iRQlFXY?rel=0"
-            frameborder="0"
-            allowfullscreen="allowfullscreen"
-            mozallowfullscreen="mozallowfullscreen"
-            msallowfullscreen="msallowfullscreen"
-            oallowfullscreen="oallowfullscreen"
-            webkitallowfullscreen="webkitallowfullscreen"
-          ></iframe>
-        </div>
-        <div class="stacked-group-C61RwL">
-          <div class="sw-SHDHHB">
-            <div class="view-lzoPek">
-              <div class="viewname-BzxCk6">
-                <div class="x2-zraioE">
-                  <div class="view-rWpX6S">
-                    <div class="x2020-nalssam-sw-RnTQO0 nalssamnewcrew">
-                      <span class="span1-yN6d6y">2020</span><span class="span2-yN6d6y">년도</span
-                      ><span class="span3-yN6d6y"> NALSSAM SW </span><span class="span4-yN6d6y">분야</span
-                      ><span class="span5-yN6d6y">&nbsp;</span><span class="span6-yN6d6y">신입생</span
-                      ><span class="span7-yN6d6y">&nbsp;</span><span class="span8-yN6d6y">모집</span>
-                    </div>
-                    <div class="x20210301-RnTQO0 datefont">2021/03/01</div>
-                    <div class="nalssam-RnTQO0 nalssamlogo">NALSSAM</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <a href="developerswpage.html">
-              <div class="link-lzoPek">
-                <div class="learn-more-T5zvdP ideaimformation dongariactfuck learn-more-style">learn more</div>
-                <img class="icon-T5zvdP" src="img/maindesktop-icon-3DF14DB2-418B-479B-A8BC-5A06748E88E3@2x.png" /></div
-            ></a>
-            <a href="developerswpage.html">
-              <div class="sw-picture-lzoPek">
-                <a href="developerswpage.html" onclick="window.event.stopPropagation()"
-                  ><img
-                    class="sw-picture-TzM2mw"
-                    src="img/maindesktop-swpicture-C4168C94-2B77-4D68-BEFF-94432B4F514F.png"
-                /></a></div
-            ></a>
-          </div>
-          <div class="the-hard-ware-SHDHHB">
-            <a href="hwpage.html">
-              <div class="view-16doD8">
-                <div class="viewname-TpBRmO">
-                  <div class="x2-rsDJhO">
-                    <div class="view-BB10vM">
-                      <div class="x2020-nalssam-the-h-LM28U6 nalssamnewcrew">
-                        <span class="span1-0HgRQE">2020</span><span class="span2-0HgRQE">년도</span
-                        ><span class="span3-0HgRQE"> NALSSAM </span><span class="span4-0HgRQE">The HardWare</span
-                        ><span class="span5-0HgRQE">&nbsp;</span><span class="span6-0HgRQE">신입생</span
-                        ><span class="span7-0HgRQE">&nbsp;</span><span class="span8-0HgRQE">모집</span>
-                      </div>
-                      <div class="x20210301-LM28U6 datefont">2021/03/01</div>
-                      <div class="nalssam-LM28U6 nalssamlogo">NALSSAM</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="the-hard-ware-TpBRmO"></div></div
-            ></a>
-            <a href="hwpage.html">
-              <div class="link-16doD8">
-                <div class="learn-more-TGvB4n ideaimformation dongariactfuck learn-more-style">learn more</div>
-                <img class="icon-TGvB4n" src="img/maindesktop-icon-3DF14DB2-418B-479B-A8BC-5A06748E88E3@2x.png" /></div
-            ></a>
-          </div>
-        </div>
-        <div class="img9696-C61RwL"></div>
       </div>
     </div>
   </body>
